# craftory

./: .gitignore  pyproject.toml  run.sh  server.py
data/: inventory.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/pages/: Chat.jsx  Inventory.jsx
