[project]
name = "craftory"
version = "0.1.0"
description = "Craft supply inventory manager with Claude-powered project planning"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "anthropic>=0.52.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.18",
]
